--- a/main.html
+++ b/main.html
@@ -7,7 +7,24 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form method="post">
+		<h2>HTML Feedback Form Creation</h2>
+
+		<label for="name">Name *</label>
+    <input type="text" id="name" name="name" minlength="3" maxlength="50" required><br><br>
+
+    <label for="portfolio">Portfolio URL *</label>
+    <input type="url" id="portfolio" name="portfolio" required><br><br>
+
+    <label for="favColor">Favorite Color *</label>
+    <input type="color" id="favColor" name="favColor"><br><br>
+
+    <label for="likeness">Likeness*</label>
+    <input type="range" id="likeness" name="likeness" min="1" max="100"><br><br>
+
+		<button type="submit">Sumbit</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
